--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,15 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.RELEASEBOT_TOKEN}}
       - name: Get version
         run: |
           echo "::set-env name=VERSION::$(/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|')"
       - name: Set up github remote
         run: |
-          echo "Setting up action remote"
+          echo "Setting up remote"
           git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --local user.name "${GITHUB_ACTOR}"
-          git remote add action https://x-access-token:${RELEASEBOT_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
       - name: Bump version
         run: |
           echo "Bumping version to ${{ env.VERSION }}"
@@ -26,9 +27,9 @@ jobs:
           git commit -m "releasing v${{ env.VERSION }}"
           echo "Pushing to release/v${{ env.VERSION }}"
           git checkout -b release/v${{ env.VERSION }}
-          git push action release/v${{ env.VERSION }}
+          git push origin release/v${{ env.VERSION }}
           git tag --force "v${{ env.VERSION }}"
-          git push --force action v${{ env.VERSION }}
+          git push --force origin v${{ env.VERSION }}
       - name: Set up Python
         uses: actions/setup-python@v2.1.4
         with:
@@ -45,10 +46,6 @@ jobs:
         run: |
           python setup.py sdist bdist_wheel
           twine upload dist/*
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
