--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,3 +59,26 @@ jobs:
           file: ./Dockerfile
           tags: athackst/mkdocs-simple-plugin:latest,athackst/mkdocs-simple-plugin:v${{ env.VERSION }}
           push: true
+  automerge:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.RELEASEBOT_TOKEN}}
+      - name: Get version
+        run: |
+          echo "::set-env name=VERSION::$(/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|')"
+      - name: 'Wait for status checks'
+        id: waitforstatuschecks
+        uses: "WyriHaximus/github-action-wait-for-status@v1.2"
+        with:
+          checkInterval: 30
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - uses: everlytic/branch-merge@1.1.0
+        if: steps.waitforstatuschecks.outputs.status == 'success'
+        with:
+          github_token: ${{ secrets.RELEASEBOT_TOKEN }}
+          source_ref: release/v${{ env.VERSION }}
+          target_branch: master
