--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,8 @@ jobs:
           sed "s/^    version=.*/    version='${{ env.VERSION }}',/" -i setup.py
           git add setup.py
           git commit -m "releasing v${{ env.VERSION }}"
-          echo "Pushing to release/v${{ env.VERSION }}"
-          git checkout -b release/v${{ env.VERSION }}
-          git push origin release/v${{ env.VERSION }}
+          echo "Update tag and push"
+          git push --force origin master
           git tag --force "v${{ env.VERSION }}"
           git push --force origin v${{ env.VERSION }}
       - name: Set up Python
@@ -47,7 +46,7 @@ jobs:
           python setup.py sdist bdist_wheel
           twine upload dist/*
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -59,24 +58,8 @@ jobs:
           file: ./Dockerfile
           tags: athackst/mkdocs-simple-plugin:latest,athackst/mkdocs-simple-plugin:v${{ env.VERSION }}
           push: true
-  automerge:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.RELEASEBOT_TOKEN}}
-      - name: Get version
-        run: |
-          echo "::set-env name=VERSION::$(/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|')"
-      - name: 'Wait for status checks'
-        id: waitforstatuschecks
-        uses: "WyriHaximus/github-action-wait-for-status@v1.2"
-        with:
-          checkInterval: 30
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: everlytic/branch-merge@1.1.0
+      - name: Merge release
+        uses: everlytic/branch-merge@1.1.0
         if: steps.waitforstatuschecks.outputs.status == 'success'
         with:
           github_token: ${{ secrets.RELEASEBOT_TOKEN }}
