--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "canonicalize",
     "changelog",
     "chmod",
+    "cname",
     "devcontainer",
     "devcontainers",
     "elgohr",
@@ -32,6 +33,7 @@
     "peaceiris",
     "pgrep",
     "pkill",
+    "pygments",
     "pylint",
     "pymdownx",
     "pymdownx emoji twemoji",
@@ -56,5 +58,9 @@
     "*.bats": "shellscript"
   },
   "files.insertFinalNewline": true,
-  "files.trimFinalNewlines": true
+  "files.trimFinalNewlines": true,
+  "yaml.customTags": [
+    "tag:yaml.org,2002:python/name:materialx.emoji.twemoji",
+    "tag:yaml.org,2002:python/name:materialx.emoji.to_svg"
+  ]
 }
