--- a/.github/workflows/test_workflows.yml
+++ b/.github/workflows/test_workflows.yml
@@ -62,5 +62,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          tags: athackst/mkdocs-simple-plugin:latest,athackst/mkdocs-simple-plugin:v${{ env.VERSION }}
+          tags: |
+            athackst/mkdocs-simple-plugin:latest
+            athackst/mkdocs-simple-plugin:v${{ env.VERSION }}
           push: false
