updated to use grammarly and fixed errors

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
 	"extensions": [
 		"ms-python.python",
 		"redhat.vscode-yaml",
-		"streetsidesoftware.code-spell-checker",
+		"znck.grammarly",
 		"yzhang.markdown-all-in-one",
 		"shakram02.bash-beautify"
 	],
