--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,4 +56,4 @@ jobs:
         with:
           github_token: ${{ secrets.RELEASEBOT_TOKEN }}
           source_ref: release/v${{ env.VERSION }}
-          target_branch: master
+          target_branch: main
