--- a/.github/workflows/release_draft.yml
+++ b/.github/workflows/release_draft.yml
@@ -2,13 +2,13 @@ name: Draft release
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   update_release_draft:
     runs-on: ubuntu-latest
     steps:
-      # Drafts your next Release notes as Pull Requests are merged into "master"
+      # Drafts your next Release notes as Pull Requests are merged into "main"
       - uses: release-drafter/release-drafter@v5
         with:
           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
