update workflow container and requirements

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -14,21 +14,16 @@ RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requ
    && rm -rf /tmp/pip-tmp
 
 ENV DEBIAN_FRONTEND=noninteractive
+ENV GEM_HOME="/usr/local/bundle"
+ENV PATH $GEM_HOME/bin:$GEM_HOME/gems/bin:$PATH
 RUN apt-get update \
    && apt-get -y install --no-install-recommends bats gcc \
    # Ruby for html-proofer
    && apt-get install -y --no-install-recommends ruby ruby-dev \
-   && mkdir -p /home/vscode/.ruby \
-   && echo 'export GEM_HOME=/home/vscode/.ruby/' >> /home/vscode/.bashrc \
-   && echo 'export PATH="$PATH:/home/vscode/.ruby/bin"' >> /home/vscode/.bashrc \
-   && . /home/vscode/.bashrc \
    && gem install html-proofer \
-   # Add local bin to path
-   && echo 'export PATH=/home/vscode/.local/bin:$PATH' >> /home/vscode/.bashrc \
    # Clean up
    && apt-get autoremove -y \
    && apt-get clean -y \
    && rm -rf /var/lib/apt/lists/*
+   
 ENV DEBIAN_FRONTEND=dialog
-
-RUN echo "source /usr/share/bash-completion/completions/git" >> /home/vscode/.bashrc
