--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,4 +58,4 @@ jobs:
         with:
           directory: "./site"
           # BANDAID: 404.html site not rendering with correct links
-          arguments: --url-ignore https://fonts.gstatic.com --allow-hash-href --file-ignore ./site/404.html --internal-domains "${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
+          arguments: --url-ignore https://fonts.gstatic.com,https://twitter.com/althack --allow-hash-href --file-ignore ./site/404.html --internal-domains "${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
