--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flake8>=3.7.8
-mkdocs>=1.1
-pymdown-extensions>=7.1
-click>=7.1
-mkdocs-material>=5.5.12
+flake8==3.8.4
+mkdocs==1.1.2
+pymdown-extensions==8.0.1
+click==7.1.2
+mkdocs-material==6.1.7
+upgrade-requirements==1.7.0
