--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: athackst/mkdocs-simple-plugin
-docs_dir: docs
+docs_dir: /tmp/mkdocs-simple/mkdocs-simple-plugin
 plugins:
 - search
 - simple:
