--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,38 +11,37 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.RELEASEBOT_TOKEN}}
-      - name: Get version
+      - name: Setup environment (test)
+        if: github.ref != 'refs/heads/main'
+        env:
+          DRY_RUN: 1
+          VERSION: "test-tag-${{ github.run_number }}"
+        run: echo "Setup test environment"
+      - name: Setup environment (release)
+        if: github.ref == 'refs/heads/main'
         run: |
           echo "VERSION=$(/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|')" >> $GITHUB_ENV
       - name: Bump version
-        run: ./.github/bump_tag.sh
+        run: |
+          git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --local user.name "${GITHUB_ACTOR}"
+          .github/bump_tag.sh
       - name: Set up Python
         uses: actions/setup-python@v2.2.1
         with:
           python-version: "3.x"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build and Publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          python setup.py sdist bdist_wheel
-          twine upload dist/*
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+          .github/publish_pypi.sh
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push docker image
-        id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -50,10 +49,7 @@ jobs:
           tags: |
             athackst/mkdocs-simple-plugin:latest
             athackst/mkdocs-simple-plugin:v${{ env.VERSION }}
-          push: true
-      - name: Merge release
-        uses: everlytic/branch-merge@1.1.0
-        with:
-          github_token: ${{ secrets.RELEASEBOT_TOKEN }}
-          source_ref: release/v${{ env.VERSION }}
-          target_branch: main
+          push: ${{ env.DRY_RUN }}
+      - name: Cleanup
+        run: |
+          ./github/cleanup_tag.sh
