feat: Add inclusion directive when extracting documentation
  When `simple` is processing a match to a "semiliterate" pattern,
  and encounters `{! FILENAME YAML !}`, it will interpolate the
  contents of FILENAME as extracted according to the parameters in
  YAML (with the same semantics as the extraction parameters of
  a "semiliterate" pattern.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,24 @@ docs_dir: /tmp/mkdocs-simple/mkdocs-simple-plugin
 plugins:
 - search
 - simple:
-    ignore_folders: [tests, site]
+    semiliterate:
+    # To use the default Python extraction with other patterns, we
+    # must re-specify it:
+    - pattern: '(\.py)$'
+      start: '"""\smd'
+      stop: '"""'
+    # Line comment example:
+    - pattern: Dockerfile()$|(\.yml)$
+      start: '###\smd'
+      stop: '###\s*$'
+      # Remove the leading `#` from all normally-extracted lines:
+      replace: ['^#(.*\s*)$']
+    # Enable inclusion directive in .md files:
+    - pattern: '(\.md)'
+      start: '^(.*\s*)$'
+      replace: [['^(.*)<!-- repo: -->.*<!-- docs:(.*)-->(.*\s*)$', '\1\2\3']]
+    include_standard_markdown: false
+    ignore_folders: [tests]
 theme:
   name: material
   palette:
