feat: Extract documentation from source files
  Adds a `semiliterate` configuration parameter to the `simple` plugin,
  consisting of a list of dicts describing how embedded documentation should
  be extracted from different types of source files. The default value for
  this parameter will extract markdown from `""" md` ... `"""` triple-quoted
  strings in Python files and `/** md` ... `**/` comment blocks in other
  source files. Full documentation in the package.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,7 @@ docs_dir: /tmp/mkdocs-simple/mkdocs-simple-plugin
 plugins:
 - search
 - simple:
-    ignore_folders:
-    - tests
+    ignore_folders: [tests, site]
 theme:
   name: material
   palette:
