--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,10 +4,16 @@ on:
   release:
     types: [published]
   pull_request:
+    types:
+      - "labeled"
+      - "opened"
+      - "reopened"
+      - "synchronize"
   workflow_dispatch:
 
 jobs:
   deploy:
+    if: contains(github.event.pull_request.labels.*.name, 'test-deploy') || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -50,7 +56,7 @@ jobs:
           tags: |
             athackst/mkdocs-simple-plugin:latest
             athackst/mkdocs-simple-plugin:v${{ env.VERSION }}
-          push: ${{ env.DRY_RUN }}
+          push: ${{ github.ref == 'refs/heads/main' }}
       - name: Cleanup
         run: |
           .github/cleanup_tag.sh
