--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ pymdown-extensions==8.1
 click==7.1.2
 mkdocs-material==6.2.3
 upgrade-requirements==1.7.0
+mkdocstrings==0.14.0
+mkdocs-macros-plugin==0.5.0
