--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with bats
         run: |
-          ./tests/integration/test.bats
+          ./tests/test.bats
 
   check-docs:
     runs-on: ubuntu-latest
