--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ mkdocs-material==6.2.3
 upgrade-requirements==1.7.0
 mkdocstrings==0.14.0
 mkdocs-macros-plugin==0.5.0
+mkdocs-awesome-pages-plugin==2.5.0
