feat: Allow semiliterate patterns with multiple "modes" of extraction
  Specifically, move the `start`, `stop`, and `replace` parameters into
  a new `extract` parameter, and allow multiple blocks of them. When one of the
  `start` regexps matches, it activates that group of the parameters, so it will
  only end with the corresponding `stop` parameter (other `stop` expressions
  will not be checked) and will only do its own replacements. So for example in
  Python, `# /md` will now only end a `# md` block, not a triple-quoted string,
  and leading `#` will not be stripped in triple-quoted strings.

  Adjust all of the existing documentation to use the new parameters.

  Corrects some typos and inaccuracies in existing documentation.

  Takes the liberty of adding to the ok-with-mkdocstrings example a comparison
  of the extracted module.md and the generated module/index.html, to highlight
  the inter-operation with the mkdocstrings module.

  Resolves #96.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,12 @@ plugins:
         - ".yml"
         - ".png"
   - macros:
+  - mkdocstrings:
+      handlers:
+        python:
+          setup_commands:
+          - import sys
+          - sys.path.append('examples/ok-with-mkdocstrings')
   - awesome-pages:
       collapse_single_pages: true
 theme:
