--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,8 +38,10 @@
           "PATH": "${env:PATH}:/home/vscode/.local/bin"
         }
       },
+      "dependsOrder": "sequence",
       "dependsOn": [
-        "pip install"
+        "pip install",
+        "mkdocs_simple_gen"
       ],
       "problemMatcher": []
     },
