--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,15 +4,15 @@ plugins:
   - search
   - simple:
       include_extensions:
-        - ".yml"
-        - ".png"
-  - macros:
+        - .yml
+        - .png
+  - macros
   - mkdocstrings:
       handlers:
         python:
           setup_commands:
-          - import sys
-          - sys.path.append('examples/ok-with-mkdocstrings')
+            - import sys
+            - sys.path.append('examples/ok-with-mkdocstrings')
   - awesome-pages:
       collapse_single_pages: true
 theme:
@@ -26,8 +26,8 @@ markdown_extensions:
   - pymdownx.highlight:
       use_pygments: true
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji ""
-      emoji_generator: !!python/name:materialx.emoji.to_svg ""
+      emoji_index: !!python/name:materialx.emoji.twemoji ''
+      emoji_generator: !!python/name:materialx.emoji.to_svg ''
 extra:
   social:
     - icon: fontawesome/brands/twitter
@@ -36,14 +36,14 @@ extra:
       link: https://hub.docker.com/u/athackst
     - icon: fontawesome/regular/laugh
       link: https://allisonthackston.com
-edit_uri: ""
+edit_uri: ''
 nav:
   - About: README.md
   - Mkdocs Simple Generator: mkdocs_simple_plugin/generator.md
   - Mkdocs Simple Plugin: mkdocs_simple_plugin/plugin.md
   - Github Action: action.md
   - Docker: docker/README.md
-  - ... | examples/**/README.md
+  - '... | examples/**/README.md'
   - Developers:
       - Developing: mkdocs_simple_plugin/README.md
       - Contributing Guide: CONTRIBUTING.md
