re-formatted comments to pass pydocstyle linter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,9 @@
   "editor.rulers": [
     80,
     127
+  ],
+  "python.linting.pydocstyleArgs": [
+    "--convention=google",
+    "--add-ignore=D415"
   ]
 }
