--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
+      - name: Lint
         run: |
-          ./tests/test_flake8.sh
+          ./tests/test_lint.sh
   build:
     runs-on: ubuntu-latest
     strategy:
