--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ upgrade-requirements==1.7.0
 mkdocstrings==0.14.0
 mkdocs-macros-plugin==0.5.0
 mkdocs-awesome-pages-plugin==2.5.0
+pydocstyle==5.1.1
