--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 click==7.1.2
 flake8==3.8.4
+markdown-include==0.6.0
 mkdocs-awesome-pages-plugin==2.5.0
 mkdocs-macros-plugin==0.5.5
 mkdocs-material==7.0.5
@@ -8,4 +9,3 @@ mkdocstrings==0.15.0
 pip-upgrader==1.4.15
 pydocstyle==5.1.1
 pymdown-extensions==8.1.1
-mkdocs-simple-plugin
