--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-flake8==3.8.4
-mkdocs==1.1.2
-pymdown-extensions==8.1.1
 click==7.1.2
-mkdocs-material==6.2.8
-upgrade-requirements==1.7.0
-mkdocstrings==0.14.0
-mkdocs-macros-plugin==0.5.0
+flake8==3.8.4
 mkdocs-awesome-pages-plugin==2.5.0
+mkdocs-macros-plugin==0.5.0
+mkdocs-material==6.2.8
+mkdocs==1.1.2
+mkdocstrings==0.14.0
+pip-upgrader==1.4.15
 pydocstyle==5.1.1
+pymdown-extensions==8.1.1
