Revert "refactor semiliterate to classes (#108)"
This reverts commit 2df66cfd45680514c56ee95762cc2f53bccd64fd.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -67,7 +67,7 @@
     {
       "label": "upgrade",
       "type": "shell",
-      "command": "pip3 install --upgrade pip && pip-upgrade --skip-virtualenv-check -p all",
+      "command": "pip3 install --upgrade pip && pip-upgrade --skip-virtualenv-check",
       "problemMatcher": []
     },
     {
