--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,10 @@ on:
       - "reopened"
       - "synchronize"
   workflow_dispatch:
+    inputs:
+      version:
+        description: "version to release"
+        required: true
 
 jobs:
   deploy:
@@ -20,14 +24,19 @@ jobs:
         with:
           token: ${{ secrets.RELEASEBOT_TOKEN}}
       - name: Setup environment (test)
-        if: github.ref != 'refs/heads/main'
+        if: github.event_name == 'pull_request'
         run: |
+          echo "${{ github.ref }}"
           echo "DRY_RUN=1" >> $GITHUB_ENV
           echo "VERSION=test-tag-${{ github.run_number }}" >> $GITHUB_ENV
       - name: Setup environment (release)
-        if: github.ref == 'refs/heads/main'
+        if: github.event_name == 'release' || github.ref == 'refs/heads/main'
         run: |
-          echo "VERSION=$(/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|')" >> $GITHUB_ENV
+          echo "VERSION=$(/usr/bin/git describe --tags `git rev-list --tags --max-count=1` | sed 's|.*v\([0-9\.]*\).*|\1|')" >> $GITHUB_ENV
+      - name: Setup environment (manual)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
       - name: Bump version
         run: |
           git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
