update release drafter settings

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-name-template: "Release v$NEXT_PATCH_VERSION"
-tag-template: "v$NEXT_PATCH_VERSION"
+name-template: "Release v$RESOLVED_VERSION"
+tag-template: "v$RESOLVED_VERSION"
 template: |
   ## Get it
 
@@ -8,9 +8,9 @@ template: |
   Install it with pip
 
   ```bash
-  pip install mkdocs-simple-plugin==$NEXT_PATCH_VERSION
+  pip install mkdocs-simple-plugin==$RESOLVED_VERSION
   ```
-  See it on pypi: [https://pypi.org/project/mkdocs-simple-plugin](https://pypi.org/project/mkdocs-simple-plugin/$NEXT_PATCH_VERSION/)
+  See it on pypi: [https://pypi.org/project/mkdocs-simple-plugin](https://pypi.org/project/mkdocs-simple-plugin/$RESOLVED_VERSION/)
 
   ### Docker 
 
@@ -29,3 +29,36 @@ template: |
   ## What’s Changed
 
   $CHANGES
+categories:
+  - title: ':zap: Breaking'
+    label: 'breaking'
+  - title: ':rocket: New'
+    label: 'feature'
+  - title: ':bug: Bug Fixes'
+    label: 'bug'
+  - title: ':toolbox: Maintenance'
+    label: 'maintenance'
+  - title: ':memo: Documentation'
+    label: 'docs'
+  - title: 'Dependency Updates'
+    label: 'dependencies'
+
+version-resolver:
+  major:
+    labels:
+      - 'breaking'
+      - 'major'
+  minor:
+    labels:
+      - 'feature'
+      - 'minor'
+  patch:
+    labels:
+      - 'bug'
+      - 'maintenance'
+      - 'docs'
+      - 'dependencies'
+      - 'security'
+
+exclude-labels:
+  - 'skip-changelog'
