--- a/.github/workflows/release_draft.yml
+++ b/.github/workflows/release_draft.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       # Drafts your next Release notes as Pull Requests are merged into "main"
       - uses: release-drafter/release-drafter@v5.15.0
+        id: release-draft
         with:
           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
           config-name: release-drafter.yml
