--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,3 +1,3 @@
 feature: ['feature/*', 'feat/*']
 bug: ['fix/*', 'bugfix/*', 'bug/*']
-maintanence: ['chore/*', 'maint/*', 'noop/*', 'no-op/*']
+maintenance: ['chore/*', 'maint/*', 'noop/*', 'no-op/*']
