--- a/.github/workflows/release_draft.yml
+++ b/.github/workflows/release_draft.yml
@@ -26,11 +26,10 @@ jobs:
         run: |
           echo "Bumping version to ${VERSION}"
           sed "s/^    version=.*/    version='${VERSION}',/" -i setup.py
-          if ! git diff-index --quiet HEAD --; then
-            git config user.name github-actions
-            git config user.email github-actions@github.com
-            git add setup.py
-            git commit -m "Updating setup.py to ${VERSION}"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add setup.py
+          if git commit -m "Updating setup.py to ${VERSION}"; then
             git push -f
             echo "Pushed update to main"
           fi
